<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preferencias_titulo_servidor">
        <EditTextPreference
            android:inputType="phone"
            android:hint="@string/hint_ip"
            android:key="@string/key_ip_servidor"
            android:summary="@string/descripcion_ip_servidor"
            android:title="@string/titulo_ip_servidor" />
        <EditTextPreference
            android:inputType="phone"
            android:hint="@string/hint_puerto"
            android:key="@string/key_puerto_servidor"
            android:title="@string/tituli_puerto_servidor"
            android:summary="@string/descripcion_puerto_servidor"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:persistent="false"
        android:title="@string/preferencias_acerca_de">
        <Preference
            android:persistent="false"
            android:summary="@string/descripcion_acerca_de"
            android:title="@string/titulo_acerca_de" />
    </PreferenceCategory>
</PreferenceScreen>